# suricata-redis-output

./: Cargo.toml  README.md
src/: ffi.rs  lib.rs
