[package]
authors = ["Jason Ish <jason.ish@oisf.net>"]
edition = "2018"
name = "suricata-redis-output"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "redis_output"

[dependencies]
anyhow = "1.0.40"
redis = {version = "0.21.2", default_features = false, features = []}
suricata = {version = "7.0.0-alpha", package = "suricata"}
