[package]
authors = ["Jason Ish <jish@oisf.net>"]
edition = "2021"
name = "suricata-redis-output"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "redis_output"

[dependencies]
anyhow = "1.0.40"
redis = {version = "0.21.2", default-features = false, features = []}
suricata = { version = "7.0.8" }
