[package]
authors = ["Jason Ish <jish@oisf.net>"]
edition = "2021"
name = "suricata-redis-output"

# Same as Suricata 8.
rust-version = "1.75.0"

# 0.8 for Suricata 8.0...
version = "0.8.0"

[lib]
crate-type = ["cdylib"]
name = "redis_output"

[dependencies]
anyhow = "1.0.40"
redis = {version = "0.25", default-features = false, features = []}
suricata = { version = "8.0.0" }
suricata-sys = { version = "8.0.0" }
url = "= 2.4.0"
